--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -178,8 +178,31 @@ html{
   overflow: hidden;
   text-align: center;
 }
-.content-img  img {
+.content-img a {
+  display:block;
+  position:relative;
+  padding-top:66.66%;
+  background:#ddd;
+}
+.content-img a::before {
+  content:'No Image Available';
+  display:inline-block;
+  position:absolute;
+  top:50%;
+  left:50%;
+  margin-left:-125px;
+  margin-top:-15px;
+  width:250px;
+  height:30px;
+  font-size:28px;
+  text-align:center;
+  color:#fff;
+}
+.content-img img {
+  position:absolute;
   width: 100%;
+  top:0;
+  left:0;
 }
 .content-txt {
   padding:50px 20px 30px;
